--- a/.github/workflows/g_actions.yml
+++ b/.github/workflows/g_actions.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["pypy3.10", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["pypy3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - uses: actions/checkout@v4
