--- a/.github/workflows/g_actions.yml
+++ b/.github/workflows/g_actions.yml
@@ -26,19 +26,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Build image
+      - name: Build and Push image to Docker Hub
         run: |
           docker build -t booora/github_ops:1.0.0 .
-          
-  push:
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-      - name: Push image to Docker Hub
-        run: |
           docker push booora/github_ops:1.0.0
+          
+  # push:
+  #   runs-on: ubuntu-latest
+
+  #   needs: build
+
+  #   steps:
+  #     - name: Push image to Docker Hub
+  #       run: |
+  #         docker push booora/github_ops:1.0.0
 
       # - name: Deploy to Kubernetes
       #   run: |
