--- a/.github/workflows/g_actions.yml
+++ b/.github/workflows/g_actions.yml
@@ -3,7 +3,7 @@ name: Python package
 on: [push]
 
 jobs:
-  build:
+  build_and_push_image:
 
     runs-on: ubuntu-latest
 
@@ -12,7 +12,9 @@ jobs:
         python-version: ["pypy3.10", "3.11", "3.12", "3.13"]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -21,26 +23,21 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3 # Required for multi-platform builds
 
-      - name: Build and Push image to Docker Hub
-        run: |
-          docker build -t booora/github_ops:1.0.0 .
-          docker push booora/github_ops:1.0.0
-          
-  # push:
-  #   runs-on: ubuntu-latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3 # For building Docker images efficiently
 
-  #   needs: build
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #   steps:
-  #     - name: Push image to Docker Hub
-  #       run: |
-  #         docker push booora/github_ops:1.0.0
-
-      # - name: Deploy to Kubernetes
-      #   run: |
-      #     kubectl apply -f kubernetes/deployment.yaml
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true 
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:1.0.0
