update workflow again

--- a/.github/workflows/g_actions.yml
+++ b/.github/workflows/g_actions.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           context: .
           push: true 
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:1.0.0
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:1.0.0
