--- a/.github/workflows/g_actions.yml
+++ b/.github/workflows/g_actions.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/setup-qemu-action@v3 # Required for multi-platform builds
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # For building Docker images efficiently
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -40,4 +40,4 @@ jobs:
         with:
           context: .
           push: true 
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:1.0.0
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
